@@ -11,6 +11,9 @@
 - primitive roots
   - power-residue? for all moduli
   - solve congruence for reduced residues?
+  - add print functions
+    - order-print-table
+    - order-count-print-table
 
 * Version 0.8.0
 
